--- a/pom.xml
+++ b/pom.xml
@@ -57,6 +57,11 @@
             <version>1.18.20.0</version>
             <type>pom</type>
         </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 
     <build>
